--- a/Tarea1/HTML_Ejercicio_2.html
+++ b/Tarea1/HTML_Ejercicio_2.html
@@ -6,9 +6,10 @@
      	<h1>Titulo Primer Nivel</h1>
 	<h2>Titulo Segundo Nivel</h2>
 	<h3>
+	<p>Parrafo</p>
 	<b>Texto Negrita</b></br>
 	<i>Texto Cursiva</i></br>
-	<u>Texto Subrayado</u>
+	<code>Formateado como Codigo</code>
 	</h3>
  </body>
 </html>
