--- a/Tarea1/JAVASCRIPT_Ejercicio_7.html
+++ b/Tarea1/JAVASCRIPT_Ejercicio_7.html
@@ -9,10 +9,11 @@
 	alert("El numero "+ numero +" es "+resultado);
 
 	function ParImpar(numero){
-	if(numero % 2 == 0) {
-	return "PAR";}
-	else {
-	return "IMPAR";}
+	if(numero % 2 == 0){
+	return "PAR";
+	}else{
+	return "IMPAR";
+	}
 	}
 	</script>
  </body>
