--- a/Tarea2/PHPyAJAX_Ejercicio_11.html
+++ b/Tarea2/PHPyAJAX_Ejercicio_11.html
@@ -1,16 +1,39 @@
 <html>
 <title>Ejercicio #11</title>
 <body>
-<form action="PHPyAJAX_Ejercicio_11.php" method="post">
 	<h1>Calculadora</h1><br>
-	Numero1= <input type="number" name="Numero1"><br><br>
-	Numero2= <input type="number" name="Numero2"><br><br>
-	Operacion: <input type="radio" name="Operacion" value="1">Sumar
-		<input type="radio" name="Operacion" value="2">Restar
-		<input type="radio" name="Operacion" value="3">Multiplicar
-		<input type="radio" name="Operacion" value="4">Dividir
+	Numero1= <input type="number" id="numero1" name="Numero1"><br><br>
+	Numero2= <input type="number" id="numero2" name="Numero2"><br><br>
+	Operacion: <select id="operacion" name="Operacion">
+			<option value="1">Sumar</option>
+			<option value="2">Restar</option>
+			<option value="3">Multiplicar</option>
+			<option value="4">Dividir</option></select>
+	<br><br><br>		
+	<input type="button" value="Calcular" onclick="Calcular()"></input>
 	<br><br><br>
-	<input type="submit" name="Enviar">
-</form>
+	<div id="div_resultado">
+		<output id="resultado"></output>
+	</div>
 </body>
+
+<script>
+function Calcular(){
+var num1 = document.getElementById("numero1").value;
+var num2 = document.getElementById("numero2").value;
+var op = document.getElementById("operacion").value;
+var datos = "&operacion="+op+"&num1="+num1+"&num2="+num2;
+
+var xmlhttp = new XMLHttpRequest();
+xmlhttp.onreadystatechange = function(){
+	if (this.readyState == 4 && this.status == 200){
+	document.getElementById("resultado").innerHTML = this.responseText;
+	}
+};
+xmlhttp.open("POST", "PHPyAJAX_Ejercicio_11.php", true);
+xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+xmlhttp.send(datos);
+}
+
+</script>
 </html>
