--- a/Tarea2/PHPyAJAX_Ejercicio_11.html
+++ b/Tarea2/PHPyAJAX_Ejercicio_11.html
@@ -1,5 +1,5 @@
 <html>
-<title>Ejercicio #11</title>
+<title>Tarea #2</title>
 <body>
 	<h1>Calculadora</h1><br>
 	Numero1= <input type="number" id="numero1" name="Numero1"><br><br>
